--- a/index.html
+++ b/index.html
@@ -47,6 +47,11 @@
             <li class="nav-item">
               <a class="nav-link" href="#projects">Projects</a>
             </li>
+
+            <li class="nav-item">
+              <a class="nav-link" href="#gallery">Gallery</a>
+            </li>
+
             <li class="nav-item">
               <a class="nav-link" href="#contact">Contact</a>
             </li>
@@ -83,11 +88,14 @@
         </div>
         <div class="row justify-content-center fs-5 text-center">
           <div class="col-md-4" data-aos="fade-down-right" data-aos-duration="1000">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, id est laborum.</p>
+            <p>Perkenalkan Nama saya Sokhi Tatema Telaumbanua. Tempat tanggal lahir Tetegewo 27 Oktober 1998. Saya dari Pulau Nias Sumatera Utara (INDONESIA). Saya adalah seorang mahasiswa STMIK</p>
           </div>
 
           <div class="col-md-4" data-aos="fade-down-left" data-aos-duration="1000" data-aos-delay="200">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod ex ea commodo nt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p>
+              Pranata Indonesia (Bekasi City), Jurusan Sistem Informasi (SI). Selain kuliah saya juga seorang Karyawan bekerja disebuah toko, selain kesibukan kuliah dan kerja saya juga belajar Bahasa
+              pemorgraman Web.
+            </p>
           </div>
         </div>
       </div>
@@ -111,10 +119,10 @@
           </div>
         </div>
         <div class="row justify-content-center">
-          <!-- -------------------isi foto------------------------------------------------- -->
+          <!-- -------------------isi foto----------1--------------------------------------- -->
           <div class="col-md-4 mb-3">
             <div class="card" data-aos="zoom-in" data-aos-duration="500">
-              <img src="img/projects/foto7.jpg" class="card-img-top" alt="projects 1" />
+              <img src="img/projects/11.jpg" class="card-img-top" alt="projects 1" />
               <div class="card-body">
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
               </div>
@@ -123,7 +131,7 @@
           <!-- -----------------------kosong isi foto--------------------------------------------- -->
           <div class="col-md-4 mb-3">
             <div class="card" data-aos="zoom-in" data-aos-duration="500" data-aos-delay="50">
-              <img src="img/projects/foto7.jpg" class="card-img-top" alt="projects 1" />
+              <img src="img/projects/12.jpg" class="card-img-top" alt="projects 1" />
               <div class="card-body">
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
               </div>
@@ -132,7 +140,7 @@
           <!-- ------------------------- isi foto-------------------------------------------- -->
           <div class="col-md-4 mb-3">
             <div class="card" data-aos="zoom-in" data-aos-duration="500" data-aos-delay="100">
-              <img src="img/projects/foto7.jpg" class="card-img-top" alt="projects 1" />
+              <img src="img/projects/13.jpg" class="card-img-top" alt="projects 1" />
               <div class="card-body">
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
               </div>
@@ -141,7 +149,7 @@
           <!-- ------------------- isi foto--------------------------------------- -->
           <div class="col-md-4 mb-3">
             <div class="card" data-aos="zoom-in-up" data-aos-duration="500" data-aos-delay="200">
-              <img src="img/projects/foto7.jpg" class="card-img-top" alt="projects 1" />
+              <img src="img/projects/14.jpg" class="card-img-top" alt="projects 1" />
               <div class="card-body">
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
               </div>
@@ -151,7 +159,7 @@
           <!-- ----------------------isi foto------------------------------------------ -->
           <div class="col-md-4 mb-3">
             <div class="card" data-aos="zoom-in-up" data-aos-duration="500" data-aos-delay="300">
-              <img src="img/projects/foto7.jpg" class="card-img-top" alt="projects 1" />
+              <img src="img/projects/15.jpg" class="card-img-top" alt="projects 1" />
               <div class="card-body">
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
               </div>
@@ -160,7 +168,7 @@
           <!-- ------------------------isi foto------------------------------------------ -->
           <div class="col-md-4 mb-3">
             <div class="card" data-aos="zoom-in-up" data-aos-duration="500" data-aos-delay="400">
-              <img src="img/projects/tugas.png" class="card-img-top" alt="projects 4" />
+              <img src="img/projects/16.jpg" class="card-img-top" alt="projects 4" />
               <div class="card-body">
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
               </div>
@@ -192,13 +200,13 @@
         <div class="row justify-content-center">
           <div class="col-md-3">
             <a href="#">
-              <img src="img/gallery/2.jpg" alt="gambar 1" class="img-fluid gallery-img" />
+              <img src="img/gallery/23.jpg" alt="gambar 1" class="img-fluid gallery-img" />
             </a>
           </div>
           <!-- ------------2--------------------------- -->
           <div class="col-md-3">
             <a href="#">
-              <img src="img/gallery/alberthus.jpg" alt="gambar 2" class="img-fluid gallery-img" />
+              <img src="img/gallery/19.jpg" alt="gambar 2" class="img-fluid gallery-img" />
             </a>
           </div>
           <!-- ---------------------3---------------------- -->
@@ -222,13 +230,13 @@
           <!-- --------------6---------------------------- -->
           <div class="col-md-3">
             <a href="#">
-              <img src="img/gallery/8.jpg" width="200%" alt="gambar 6" class="img-fluid gallery-img" />
+              <img src="img/gallery/18.jpg" width="200%" alt="gambar 6" class="img-fluid gallery-img" />
             </a>
           </div>
           <!-- --------------------7------------------------- -->
           <div class="col-md-3">
             <a href="#">
-              <img src="img/gallery/16.jpg" alt="gambar 6" class="img-fluid gallery-img" />
+              <img src="img/gallery/21.jpg" alt="gambar 6" class="img-fluid gallery-img" />
             </a>
           </div>
           <!-- ----------------8----------------------- -->
@@ -246,7 +254,19 @@
           <!-- --------------------10------------------------- -->
           <div class="col-md-3">
             <a href="#">
-              <img src="img/gallery/5.jpg" alt="gambar 10" class="img-fluid gallery-img" />
+              <img src="img/gallery/2.jpg" alt="gambar 10" class="img-fluid gallery-img" />
+            </a>
+          </div>
+          <!-- ---------------11-------------- -->
+          <div class="col-md-3">
+            <a href="#">
+              <img src="img/gallery/23.jpg" alt="gambar 10" class="img-fluid gallery-img" />
+            </a>
+          </div>
+          <!-- -------12--------------------- -->
+          <div class="col-md-3">
+            <a href="#">
+              <img src="img/gallery/15.jpg" alt="gambar 10" class="img-fluid gallery-img" />
             </a>
           </div>
         </div>
@@ -274,18 +294,18 @@
             <form name="Sokhi-Tatema-Contact-Form">
               <div class="mb-3">
                 <label for="name" class="form-label">Nama Lengkap</label>
-                <input type="text" class="form-control" id="name" aria-describedby="name" name="nama" />
+                <input type="text" class="form-control" id="name" aria-describedby="name" name="nama" required />
               </div>
               <!-- -------------------------------------------------- -->
               <div class="mb-3">
                 <label for="email" class="form-label">Email</label>
-                <input type="email" class="form-control" id="email" aria-describedby="email" name="email" />
+                <input type="email" class="form-control" id="email" aria-describedby="email" name="email" required />
               </div>
               <!-- ------------------------------------------ -->
 
               <div class="mb-3">
                 <label for="pesan" class="form-label">Pesan</label>
-                <textarea class="form-control" id="pesan" rows="3" name="pesan"></textarea>
+                <textarea class="form-control" id="pesan" rows="3" name="pesan" required></textarea>
               </div>
               <!-- --------------------------------------------------- -->
               <button type="submit" class="btn btn-primary btn-kirim">Kirim</button>
@@ -325,6 +345,7 @@
 
       AOS.init({
         once: true,
+        duration: 2000,
       });
     </script>
 
